# rabbitmq_c_test

./: .gitignore  CMakeLists.txt  README  docker-compose.yml
src/: receiver.c  sender.c
